[project]
name = "chapter12"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "decorator==4.4.2",
    "dotenv>=0.9.9",
    "faiss-cpu==1.8.0.post1",
    "langchain-anthropic==0.2.0",
    "langchain-community==0.3.0",
    "langchain-core==0.3.0",
    "langchain-openai==0.2.0",
    "langgraph==0.2.22",
    "numpy==1.26.4",
    "pydantic-settings==2.5.2",
    "retry==0.9.2",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
